tp_ekf_slam: comment  submssion section

--- a/tps/tp_ekf_slam/tp.tex
+++ b/tps/tp_ekf_slam/tp.tex
@@ -157,8 +157,8 @@ Answer the following questions in your writeup:
     \item Plot the position error of robot state and the landmark positions as the motion factor (\texttt{--motion-factor}) and observation factor (\texttt{--observation-factor}) vary \textbf{independently} over $[0.1,0.3,1.0]$. There are 9 data points in total. Run 10 trials per value with different random seeds (\texttt{--multi\_run 10}) and plot the mean and standard deviation. Discuss anything interesting you observe.
 \end{enumerate}
 
-\section{Submission}
-We will be using the Canvas for submission of the assignments. Please submit the written assignment answers as a PDF. For the code, submit a zip file of the entire working directory.
+% \section{Submission}
+% We will be using the Canvas for submission of the assignments. Please submit the written assignment answers as a PDF. For the code, submit a zip file of the entire working directory.
 
 \printbibliography
 
