--- a/tps/parcial/parcial.tex
+++ b/tps/parcial/parcial.tex
@@ -20,11 +20,27 @@
 \begin{document}
 \maketitle
 
-\section{Sensores}
-\ejercicio Dibuje el árbol de transformaciones
+%section{Sensores}
+%\ejercicio Dibuje el árbol de transformaciones
 
 
-\ejercicio 
+%\ejercicio Explique el comportamiento de la matriz de covarianza en las etapas de predicción y corrección de EKF?
+
+\ejercicio What is the meaning of the covariance matrix?
+
+\ejercicio Explain the behaviour of the covariance matrix in the prediction step and the correction step of the EKF?
+
+\ejercicio In the Practical Assignment, where and why did you apply the utils.minimized\_angle() function ?
+
+\ejercicio What are the main difference and similarities between PF and EKF?
+
+\ejercicio In PF, What could happen if all the particles have the same weight?
+
+\ejercicio In PF, What can happen if there used a too low or a too high number of particle?
+
+\ejercicio What happen if a loop closing is done in an EKF-SLAM?
+
+\ejercicio What are the two types of Graph-SLAM techniques that we have?
 
 
 
