--- a/tps/parcial/parcial.tex
+++ b/tps/parcial/parcial.tex
@@ -80,35 +80,37 @@ Nota: Usted puede expresar los resultados usando expresiones, incluyendo fraccio
 \section*{Question 6}
 Considere un sistema cuyo estado es representado, en el tiempo discreto k, por el vector
 \begin{equation*}
-    X = \begin{bmatrix}
-            x_1(k)\\
-            x_2(k)
+    X_{k} = \begin{bmatrix}
+            x_{k}\\
+            y_{k}
         \end{bmatrix}
 \end{equation*}
 
-Suponga que un estimado del estado (en el tiempo k1) es dado por
-
-\[ \hat{X}(k_1) = \begin{bmatrix} 1 \\ 2 \end{bmatrix}, \quad P(k_1) = \begin{bmatrix} 1 & 1 \\ 1 & 2 \end{bmatrix} \]
-
-Suponga que en el mismo instante k 1 se mide cierta salida del sistema, cuya relacion functional con el estado es
+Suponga que un estimado del estado (en el tiempo $k = 1$) es dado por
 
 \begin{equation*}
-y(k) = x_1(k)^3 + x_2(k)
+\mu_{1} = \begin{bmatrix} 1 \\ 2 \end{bmatrix}, \quad \covariance_{1} = \begin{bmatrix} 1 & 1 \\ 1 & 2 \end{bmatrix}    
 \end{equation*}
 
-La medida es realizada a traves de un sensor; la lectura es y k1 = 3. Se sabe que la medida esta contaminada con ruido blanco Gaussiano, cuya desviacion estandar es 0.5 (asuma que las unidades son consistentes). Basado en esta medicion usted realiza un update de EKF (Extended Kalman Filter)  sobre los estimados actuales. Una manera de hacerlo es por medio de las siguientes operaciones:
+Suponga que en el mismo instante $k=1$ se mide cierta salida del sistema, cuya relacion functional con el estado es
+
+\begin{equation*}
+    h\left(X_{k}\right) = \left(x_{k}\right)^3 + y_{k}
+\end{equation*}
+
+La medida es realizada a traves de un sensor; la lectura es $y_{1} = 3$. Se sabe que la medida esta contaminada con ruido blanco Gaussiano, cuya desviacion estandar es $0.5$ (asuma que las unidades son consistentes). Basado en esta medicion usted realiza un update de EKF (Extended Kalman Filter) sobre los estimados actuales. Una manera de hacerlo es por medio de las siguientes operaciones:
 
     \begin{algorithmic}[1]
-        \State $S_{t}^{i} = \observationModelJacobian_{t}^{i} \overline{\covariance}_{t} \observationModelJacobian_{t}^{i^{\top}} + \observationModelCovariance_{t} $
+        \State $S_{k} = \observationModelJacobian_{k} \overline{\covariance}_{k} \observationModelJacobian_{k}^{\top} + \observationModelCovariance_{k} $
 
-        \State $\kalmanGain_{t}^{i} = \overline{\covariance}_{t} {\observationModelJacobian_{t}^{i}}^{\top} S_{t}^{i^{-1}} $
-        \State $\mu_{t} = \overline{\mu}_{t} + \kalmanGain_{t}^{i}(\observation_{t} - \hat{\observation}_{t}^{i})$
-        \State $\covariance_{t} = (I - \kalmanGain_{t}^{i}\observationModelJacobian_{t}^{i})\overline{\covariance}_{t}$
+        \State $\kalmanGain_{k} = \overline{\covariance}_{k} {\observationModelJacobian_{k}}^{\top} S_{k}^{-1} $
+        \State $\mu_{k} = \overline{\mu}_{k} + \kalmanGain_{k}(\observation_{k} - h(\overline{\mu}_{k}))$
+        \State $\covariance_{k} = (I - \kalmanGain_{k}\observationModelJacobian_{k})\overline{\covariance}_{k}$
     \end{algorithmic}
 
     \begin{enumerate}
-        \item Use las expresiones provistas para implementar el EKF update. E.g. especifique los valores que tomarian los siquientes items: $y(k)$, $z$, $H$, $R(k)$, $\hat{X}(k|k-1)$, $P(k|k-1)$.
-        \item Mencione que significan (que representan) los siguientes items $\hat{X}(k|k-1)$, $P(k|k-1)$, $\hat{X}(k|k)$, $P(k|k)$.
+        \item Use las expresiones provistas para implementar el EKF update. E.g. especifique los valores que tomarian los siquientes elementos: $\observationModelJacobian_{k}$, $\observationModelCovariance_{k}$, $\overline{\mu}_{k}$, $\overline{\covariance}_{k}$.
+        \item Mencione qué significan (qué representan) los siguientes elementos: $\overline{\mu}_{k}$, $\overline{\covariance}_{k}$, $\mu_{k}$, $\covariance_{k}$.
     \end{enumerate}
 
 \end{document}
