--- a/tps/parcial/parcial.tex
+++ b/tps/parcial/parcial.tex
@@ -53,7 +53,7 @@
 
 \item Considere el sistema dinámico, descripto por el siguiente modelo 
 \begin{equation*}
-    x_{k+1} = \frac{1}{2}x_{k} \qquad x \in \mathbb{R}^{1}
+    x_{k+1} = \frac{1}{2}x_{k} \qquad x_{k} \in \mathbb{R}
 \end{equation*}
 El modelo es considerado perfecto.
 
@@ -62,7 +62,7 @@ El valor inicial de la variable $x_0$ no es conocido perfectamente, es decir sol
 (nota: las unidades usadas en ambos parametros son consistentes)
 Usted es requerido que provea predicciones para $x_k$ para los tiempos discretos $k=[1,2,3,4]$.
 
-Cada valor predecido debera ser provisto como un valor esperado y varianza associada,
+Cada valor predicho debera ser provisto como un valor esperado y varianza associada,
 $\left(\mu_{k}, \sigma_{k}^2\right)$.
 
 \item Considere el mismo sistema mencionado en el item (a), pero ahora se considera que el modelo no es perfecto. El nuevo modelo es expresado como sigue :
