Fix typos in parcial

--- a/tps/parcial/parcial.tex
+++ b/tps/parcial/parcial.tex
@@ -42,7 +42,7 @@
 
 %\ejercicio What are the two types of Graph-SLAM techniques that we have?
 
-\ejercicio What are the main error sources for a SLAM system?
+\ejercicio What are the main sources of error for a SLAM system?
 
 \ejercicio What is the main difference between EKF-SLAM and Graph-SLAM?
 
