Slides 03: Add gyroscpe_video_mems

--- a/teoricas/teorica_03/src/imu.tex
+++ b/teoricas/teorica_03/src/imu.tex
@@ -119,11 +119,12 @@
         \item Un Giróscopo internamente tiene una masa resonante (vibrando constantemente) dentro de un marco, que permise que solo pueda vibrar en una sola dirección. Este movimiento se convierte en señales eléctricas de muy bajas corrientes que se pueden amplificar para ser leídas por un microcontrolador.
     \end{itemize}
     
-    \begin{figure}[!h]
-        \centering
-        \includegraphics[width=0.4\columnwidth]{images/gyroscope_mems_2.png}
-    \end{figure}
-    
+    \begin{center}
+        \includegraphics[width=0.4\columnwidth,valign=m]{images/gyroscope_mems_2.png}
+        \hspace{1em}
+        \movie[autostart,loop,poster]{\includegraphics[width=0.4\columnwidth,valign=m]{./images/video_gyroscope_mems.jpg}}{./videos/gyroscope_mems.mp4}
+    \end{center}
+
     \begin{itemize}
         \item Cuando la masa resonante se mueve (o vibra) hacia el borde exterior de la rotación, se acelera hacia la derecha y ejerce sobre el marco una fuerza de reacción hacia la izquierda (flecha verde). Cuando se mueve hacia el centro de la rotación, ejerce una fuerza hacia la derecha (flecha verde).
     \end{itemize}
@@ -176,6 +177,7 @@
 
 \begin{frame}
     \frametitle{Giróscopo Óptico: Sagnac Effect}
+    \note{Video extraido de https://www.youtube.com/watch?v=V6XSsNAWg00}
     \scriptsize
     
     \TODO{Ver vídeo: https://www.youtube.com/watch?v=V6XSsNAWg00 para extraer sub-videos y aplicaciones (orientación abosuoluta y calculo de velocidad de angular) y giróscopo óptico}
