Convert optinal exercises in tps

--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -33,6 +33,8 @@ El objetivo de este trabajo práctico es comprender el modelo cinemático y la e
     \item Se debe entregar un informe en Lyx o \LaTeX\  explicando el trabajo realizado y analizando los resultados obtenidos.
     
     \item En caso de utilizar el framework \url{https://www.theconstructsim.com}, se deberá proporcionar además el link al proyecto.
+    
+    \item Haciendo los ejercicios obligarorios (no opcionales), el trabajo tiene una nota máxima de 8. Los ejercicios opcionales permiten llegar a la nota máxima de 10.
 \end{itemize}
 
 
@@ -147,9 +149,9 @@ resulta demasiado agresivo)
 	Utilizar una relación de aspecto 1:1 para el gráfico del camino y evitar en lo posible el registro de datos iguales a cero.
 \end{nota}
 
-\ejercicio Obtener otro registro de datos para un camino circular del robot y graficar el camino y la trayectoria.
+\ejercicio (Opcional) Obtener otro registro de datos para un camino circular del robot y graficar el camino y la trayectoria.
 
-\ejercicio Marcar tres puntos cualquiera en el gráfico del camino del robot y sus correspondientes puntos en la trayectoria (Ver Figura~\ref{fig:trajectory_example}). No elegir los puntos de inicio y final del camino.
+\ejercicio (Opcional) Marcar tres puntos cualquiera en el gráfico del camino del robot y sus correspondientes puntos en la trayectoria (Ver Figura~\ref{fig:trajectory_example}). No elegir los puntos de inicio y final del camino.
 
 \begin{figure}[!htbp]
     \centering
