--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -22,8 +22,15 @@
 \maketitle
 
 \section{Entrega}
-Se deberá entregar un informe realizado en Lyx\footnote{\url{https://www.lyx.org/}} o \LaTeX\ con los ejercicios resueltos y explicando la solución según lo vea necesario para su comprensión. Para realizar gráficos se recomienda la utilización de la herramienta inkscape\footnote{\url{https://inkscape.org/}}. Para el código se debe proveer el link de un repositorio git junto con un archivo README.md con las instrucciones de ejecución.
-
+\begin{itemize}
+    \item Se debe entregar un informe realizado en Lyx\footnote{\url{https://www.lyx.org/}} o \LaTeX\ con los ejercicios resueltos y explicando la solución según lo vea necesario para su comprensión.
+    
+    \item Para realizar gráficos se recomienda la utilización de la herramienta inkscape\footnote{\url{https://inkscape.org/}}.
+    
+    \item Se debe proveer un repositorio git que contenga el código desarrollado y un archivo \lstinline{README.md} con las instrucciones de compilación y ejecución.
+    
+    \item Haciendo los ejercicios obligarorios (no opcionales), el trabajo tiene una nota máxima de 8. Los ejercicios opcionales permiten llegar a la nota máxima de 10.
+\end{itemize}
 \section{Ejercicios}
 Esta práctica es para ponerse a punto con transformaciones.
 
@@ -51,7 +58,7 @@ Esta práctica es para ponerse a punto con transformaciones.
     \end{figure}
     
     
-\ejercicio Dada los siguientes ángulos de Euler $(\alpha = \frac{4\pi}{7}, \beta = \frac{\pi}{2}, \gamma = -\frac{\pi}{3})$, con órden $xyz$ (primero rotación en $x$, luego en $y$ y finalmente en $z$) utilizando Rotación Intrínseca. Se pide:
+\ejercicio (Opcional ) Dada los siguientes ángulos de Euler $(\alpha = \frac{4\pi}{7}, \beta = \frac{\pi}{2}, \gamma = -\frac{\pi}{3})$, con órden $xyz$ (primero rotación en $x$, luego en $y$ y finalmente en $z$) utilizando Rotación Intrínseca. Se pide:
 
 \begin{enumerate}
     \item Calcular la matríz de Rotación resultante $R = R_{x}(\alpha) R_{y}(\beta) R_{z}(\gamma)$.
@@ -78,7 +85,7 @@ Resuelva:
     \item ¿Cuál es la pose (posición y orientación) del robot B en coordenadas del Mundo?
 \end{enumerate}
 
-\ejercicio Data la pose del robot (Body) en el mundo: $\transform{\worldCoordSystem}{\bodyCoordSystem_{0}}$. Si se tiene el camino (conjunto de poses $\transform{\cameraCoordSystem_{0}}{\cameraCoordSystem_{i}}$ con $i = 1 \dots n$) realizado por la cámara $\cameraCoordSystem$ (montada sobre el robot) en el marco de coordenadas de la cámara inicial $\cameraCoordSystem_{0}$. Sabiendo la transformación $\transform{\bodyCoordSystem}{\cameraCoordSystem}$, 
+\ejercicio (Opcional) Data la pose del robot (Body) en el mundo: $\transform{\worldCoordSystem}{\bodyCoordSystem_{0}}$. Si se tiene el camino (conjunto de poses $\transform{\cameraCoordSystem_{0}}{\cameraCoordSystem_{i}}$ con $i = 1 \dots n$) realizado por la cámara $\cameraCoordSystem$ (montada sobre el robot) en el marco de coordenadas de la cámara inicial $\cameraCoordSystem_{0}$. Sabiendo la transformación $\transform{\bodyCoordSystem}{\cameraCoordSystem}$, 
 \begin{itemize}
 	\item ¿Qué procedimiento hay que realizar para obtener el camino realizado por la cámara en el sistema de coordenadas del mundo?.
 	\item ¿Qué procedimiento hay que realizar para obtener el camino realizado por el robot (Body) en el sistema de coordenadas del mundo?
