--- a/tps/tp4/tp4.tex
+++ b/tps/tp4/tp4.tex
@@ -35,12 +35,14 @@
 		\item Se debe proveer un repositorio git que contenga el código desarrollado, una imagen docker y un archivo \lstinline{README.md} con las instrucciones de compilación y ejecución.
 		
 		\item Se debe entregar un informe en Lyx o \LaTeX\  explicando el trabajo realizado y analizando los resultados obtenidos.
+		
+		\item Haciendo los ejercicios obligarorios (no opcionales), el trabajo tiene una nota máxima de 8. Los ejercicios opcionales permiten llegar a la nota máxima de 10.
 	\end{itemize}
 
 	
 	\section{Ejercicios Teóricos}
     
-    \ejercicio Kalman Gain
+    \ejercicio (Opcional) Kalman Gain
     
     Recordemos que si tenemos dos funciones de densidad de probabilidad Gaussianas:
     
@@ -142,7 +144,7 @@ python localization.py --plot none
 \end{lstlisting}
 
 
-	La línea {\color{blue} azul} traza la posición del robot (ground-truth), que es el resultado de acciones ruidosas. La línea {\color{green} verde} traza la posición del robot asumiendo que las acciones no son ruidosas (trayectoria deseada pero no la real). Después de implementar un filtro, la posición del robot estimada por el filtro se dibujará en {\color{red} rojo}.
+	La línea {\color{blue} azul} traza la posición del robot (\emph{ground-truth}), que es el resultado de acciones ruidosas. La línea {\color{green} verde} traza la posición del robot asumiendo que las acciones no son ruidosas (trayectoria deseada pero no la real). Después de implementar un filtro, la posición del robot estimada por el filtro se dibujará en {\color{red} rojo}.
 	
 	
 \begin{lstlisting}[style=bash] 
