--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -28,9 +28,14 @@
     \item Para realizar gráficos se recomienda la utilización de la herramienta inkscape\footnote{\url{https://inkscape.org/}}.
     
     \item Se debe proveer un repositorio git que contenga el código desarrollado y un archivo \lstinline{README.md} con las instrucciones de compilación y ejecución.
-    
-    \item Haciendo los ejercicios obligarorios (no opcionales), el trabajo tiene una nota máxima de 8. Los ejercicios opcionales permiten llegar a la nota máxima de 10.
 \end{itemize}
+
+\section{Evaluación}
+\begin{itemize}
+    \item Haciendo únicamente los ejercicios obligarorios (no opcionales), el trabajo tiene una nota máxima de 8. Los ejercicios opcionales permiten llegar a la nota máxima de 10.
+    \item Entregas Fuera de Término: Si la entrega se realiza durante la primer semana luego del plazo, se decuentan 2 puntos. Si la entrega es más tarde que esto último la nota máxima es de 6.
+\end{itemize}
+
 \section{Ejercicios}
 Esta práctica es para ponerse a punto con transformaciones.
 
