--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -33,10 +33,13 @@ El objetivo de este trabajo práctico es comprender el modelo cinemático y la e
     \item Se debe entregar un informe en Lyx o \LaTeX\  explicando el trabajo realizado y analizando los resultados obtenidos.
     
     \item En caso de utilizar el framework \url{https://www.theconstructsim.com}, se deberá proporcionar además el link al proyecto.
-    
-    \item Haciendo los ejercicios obligarorios (no opcionales), el trabajo tiene una nota máxima de 8. Los ejercicios opcionales permiten llegar a la nota máxima de 10.
 \end{itemize}
 
+\section{Evaluación}
+\begin{itemize}
+    \item Haciendo únicamente los ejercicios obligarorios (no opcionales), el trabajo tiene una nota máxima de 8. Los ejercicios opcionales permiten llegar a la nota máxima de 10.
+    \item Entregas Fuera de Término: Si la entrega se realiza durante la primer semana luego del plazo, se decuentan 2 puntos. Si la entrega es más tarde que esto último la nota máxima es de 6.
+\end{itemize}
 
 \section{Instrucciones de compilación}
 Pasos para trabajar en el simulador Gazebo con el robot TurtleBot3. Mas información en: \url{https://navigation.ros.org/getting_started/}
