TP1: Add some observation

--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -62,8 +62,9 @@ Esta práctica es para ponerse a punto con transformaciones.
     \subfloat[$R_{z}(\SI{180}{\degree})R_{x}(\SI{-90}{\degree})R_{y}(\SI{90}{\degree})$]{}
     \end{figure}
     
+    Observar que estas matríces de rotación pueden ser interpretadas como rotaciones intrínsecas o extrínsecas. Por ejemplo, la última matríz puede ser interpretada como una rotación intrínseca $zx^{\prime}y^{\prime\prime}$ o rotación extrínseca $yxz$.
     
-\ejercicio (Opcional ) Dada los siguientes ángulos de Euler $(\alpha = \frac{4\pi}{7}, \beta = \frac{\pi}{2}, \gamma = -\frac{\pi}{3})$, con órden $xyz$ (primero rotación en $x$, luego en $y$ y finalmente en $z$) utilizando Rotación Intrínseca. Se pide:
+\ejercicio (Opcional) Dada los siguientes ángulos de Euler $(\alpha = \frac{4\pi}{7}, \beta = \frac{\pi}{2}, \gamma = -\frac{\pi}{3})$, con órden $xyz$ (primero rotación en $x$, luego en $y$ y finalmente en $z$) utilizando Rotación Intrínseca. Se pide:
 
 \begin{enumerate}
     \item Calcular la matríz de Rotación resultante $R = R_{x}(\alpha) R_{y}(\beta) R_{z}(\gamma)$.
