--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -108,7 +108,7 @@ Descargue el archivo \emph{ground-truth} (trayectoria real realizada por el robo
 \end{nota}
 
 \begin{enumerate}
-    \item El \emph{ground-truth} se encuentra en coordenadas de la IMU (Body). Se pide crear un script en python que dada la trayectoría ground-truth (timestamp, x, y, z, qw, qx, qy, qz) (primeras 8 columnas del archivo \lstinline{mav0/state_groundtruth_estimate0/data.csv}) genere el camino ground-truth de la cámara izquierda, esté debe estar dado en el sistema de coordenadas de la cámara izquierda inicial. Para esto deberá utilizar las transformaciones provistas en el dataset.
+    \item El \emph{ground-truth} esta dado por la pose de la IMU (Body) en el sistema de coordenadas del World, esto es $\transform{\worldCoordSystem}{\bodyCoordSystem_{i}}$. Se pide crear un script en python que dada la trayectoría ground-truth (timestamp, x, y, z, qw, qx, qy, qz) (primeras 8 columnas del archivo \lstinline{mav0/state_groundtruth_estimate0/data.csv}) genere el camino ground-truth de la cámara izquierda, esté debe estar dado en el sistema de coordenadas de la cámara izquierda inicial. Para esto deberá utilizar las transformaciones provistas en el dataset.
     
     \item Modifique el script para que el timestamp del nuevo \emph{ground-truth} este en segundos con precisión de nanosegundos. Agregar las primeras 5 filas del ground-truth resultante y las del original del dataset al informe.
     
