Tp2: Minor changes

--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -46,11 +46,11 @@ Pasos para trabajar en el simulador Gazebo con el robot TurtleBot3. Mas informac
 
 \begin{enumerate}
 
-\item (Opcional) Si no puede trabajar en su propia computadora (con Ubuntu 22.04) entonces realice los siguientes pasos:
+\item (Opcional) Si no puede trabajar en su propia computadora (con la última versión de Ubuntu LTS disponible) entonces realice los siguientes pasos:
 
 \begin{enumerate}
 	\item Iniciar sesión en \url{https://www.theconstructsim.com}.
-	\item Crea un proyecto ROSject y seleccionar ROS2 {\bf \<distro\>} como distribución.
+	\item Crea un proyecto ROSject y seleccionar ROS2 {\bf \lstinline[style=bash]{<distro>}} como distribución.
 \end{enumerate}
 
 
@@ -72,7 +72,7 @@ Instalar los paquetes de Turtlebot 3
 	sudo apt install ros-<distro>-turtlebot3*
 \end{lstlisting}
 
-	\item Incorporar el script \lstinline[style=bash]{dump_odom.py} provisto por la cátedra
+	\item Descargar el script \lstinline[style=bash]{dump_odom.py} provisto por la cátedra
 	
 \end{enumerate}
 
