--- a/apuntes/camera_calibration/camera_calibration_guide.tex
+++ b/apuntes/camera_calibration/camera_calibration_guide.tex
@@ -43,6 +43,9 @@ ros2 run camera_calibration cameracalibrator --approximate 0.1 --size 8x6 --squa
 \section{Intel D455}
 
 Dependendias
+
+Instalar el librealsense2 SDK \url{https://docs.ros.org/en/jazzy/p/librealsense2/doc/installation.html}
+
 \begin{lstlisting}[style=bash]
 sudo apt-get install ros-$ROS_DISTRO-diagnostic-updater
 sudo apt install ros-$ROS_DISTRO-librealsense2*
