--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -97,7 +97,11 @@ ros2 launch nav2_bringup tb3_simulation_launch.py headless:=False
 
 	%\item Crear un launch que permita lanzar la simulación pero sin un mapa y sin el sistema de localización. Se recomienda copiar y modificar los archivos \lstinline{tb3_simulation_launch.py} comentando el código relacionado a la localización (\lstinline{slam}) y al mapa (\lstinline{map}); y \lstinline{world_only.model} comentando el código relacionado al modelo del mundo a utilizar. Entre otros cambios, en el archivo launch deberá modificar el path al world modificado.
 	
-	\item Utilizar el launch y el modelo world provisto por la cátedra  para lanzar la simulación pero sin un mapa y sin el sistema de localización. El launch provisto es una modificación del  archivo \lstinline[style=bash]{tb3_simulation_launch.py} donde se comentó el código relacionado a la localización (\lstinline[style=bash]{slam}) y al mapa (\lstinline[style=bash]{map}). El modelo world \lstinline[style=bash]{world_only.model} resulta de comentar el código relacionado al modelo del mundo a utilizar.
+	\item Utilizar el launch y el modelo world provisto por la cátedra  para lanzar la simulación pero sin un mapa y sin el sistema de localización. El launch provisto es una modificación del  archivo \lstinline[style=bash]{tb3_simulation_launch.py} donde se comentó el código relacionado a la localización (\lstinline[style=bash]{slam}) y al mapa (\lstinline[style=bash]{map}). El modelo world \lstinline[style=bash]{world_only.model} resulta de comentar el código relacionado al modelo del mundo a utilizar. Lanzar el launch desde su workspace:
+	
+\begin{lstlisting}[style=bash] 
+ros2 launch $HOME/dev_ws/src/tb3_simulation_launch.py headless:=False
+\end{lstlisting}
 	
 
 	\item Una vez teniendo el robot corriendo en un mundo sin obstáculos y sin un sistema de localización, enviar comandos de velocidad para mover el robot:
